--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -252,3 +252,4 @@ mark_global_chongqun: 'https://seer2-resource.yuuinih.com/png/markImage/20011.pn
 mark_zhanzhilingyu: 'https://seer2-resource.yuuinih.com/png/markImage/3281.png'
 mark_zhandoulingyu: 'https://seer2-resource.yuuinih.com/png/markImage/3282.png'
 mark_global_guzhanchang: 'https://seer2-resource.yuuinih.com/png/markImage/20012.png'
+mark_xifamihuo: "https://seer2-resource.yuuinih.com/png/markImage/3126.png"
