--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -893,3 +893,17 @@ skill_zhanzhilingyu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp
 skill_kuangzhan: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
 skill_juezhanzhidi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
 skill_yitedaluandou: 'https://seer2-resource.yuuinih.com/sound/skill/11438.mp3'
+skill_xifayishi: "https://seer2-resource.yuuinih.com/sound/skill/09_1_003.mp3"
+skill_yingzhaolianji: "https://seer2-resource.yuuinih.com/sound/skill/09_2_002.mp3"
+skill_xifaershi: "https://seer2-resource.yuuinih.com/sound/skill/09_3_003.mp3"
+skill_suishigongji: "https://seer2-resource.yuuinih.com/sound/skill/09_2_001.mp3"
+skill_mozhua: "https://seer2-resource.yuuinih.com/sound/skill/09_1_003.mp3"
+skill_xifasanshi: "https://seer2-resource.yuuinih.com/sound/skill/09_2_002.mp3"
+skill_fenglizhuaji: "https://seer2-resource.yuuinih.com/sound/skill/09_1_002.mp3"
+skill_dunzu: "https://seer2-resource.yuuinih.com/sound/skill/09_3_002.mp3"
+skill_lieshituji: "https://seer2-resource.yuuinih.com/sound/skill/09_1_002.mp3"
+skill_juzhaoliediji: "https://seer2-resource.yuuinih.com/sound/skill/10770.mp3"
+skill_gangzhaozhiji: "https://seer2-resource.yuuinih.com/sound/skill/09_1_003.mp3"
+skill_xifasishi: "https://seer2-resource.yuuinih.com/sound/skill/09_2_002.mp3"
+skill_tishen: "https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3"
+skill_xifalingshi: "https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3"
