--- a/data/mark_emblem.yaml
+++ b/data/mark_emblem.yaml
@@ -331,9 +331,13 @@
   config: *emblem_config
   tags: [emblem]
   effect:
-    - effect_emblem_increase_douzhanzhihun_fixed_damage_50_percent #TODO: Implement emblem effect for skill_douzhanzhihun
+    - effect_emblem_increase_douzhanzhihun_fixed_damage_50_percent 
 - id: mark_emblem_moshu
   config: *emblem_config
   tags: [emblem]
   effect: 
     - effect_emblem_xifa_skill_accuracy_boost_5_percent
+- id: mark_emblem_wuxing
+  config: *emblem_config
+  tags: [emblem]
+  effect: [] # 该纹章的效果在技能上
