--- a/data/species.yaml
+++ b/data/species.yaml
@@ -7755,3 +7755,117 @@
     - mark_ability_xifa
   emblem:
     - mark_emblem_moshu
+- id: pet_huanhuan
+  num: 65
+  element: Normal
+  baseStats:
+    hp: 86
+    atk: 126
+    spa: 126
+    def: 116
+    spd: 116
+    spe: 100
+  genderRatio:
+    - 5
+    - 5
+  heightRange:
+    - 36
+    - 41
+  weightRange:
+    - 14
+    - 19
+  learnable_skills:
+    - skill_id: skill_zhuangji
+      level: 1
+      hidden: false
+    - skill_id: skill_zhongji
+      level: 5
+      hidden: false
+    - skill_id: skill_ruili
+      level: 9
+      hidden: false
+    - skill_id: skill_qinangdan
+      level: 13
+      hidden: false
+    - skill_id: skill_qigaichongfeng
+      level: 18
+      hidden: false
+    - skill_id: skill_guancha
+      level: 23
+      hidden: false
+  ability:
+    - mark_ability_renzhen
+  emblem:
+    - mark_emblem_wuxing
+- id: pet_huanli
+  num: 66
+  element: Normal
+  baseStats:
+    hp: 176
+    atk: 176
+    spa: 176
+    def: 161
+    spd: 161
+    spe: 145
+  genderRatio:
+    - 5
+    - 5
+  heightRange:
+    - 85
+    - 90
+  weightRange:
+    - 40
+    - 45
+  learnable_skills:
+    - skill_id: skill_zhuangji
+      level: 1
+      hidden: false
+    - skill_id: skill_zhongji
+      level: 5
+      hidden: false
+    - skill_id: skill_ruili
+      level: 9
+      hidden: false
+    - skill_id: skill_qinangdan
+      level: 13
+      hidden: false
+    - skill_id: skill_qigaichongfeng
+      level: 18
+      hidden: false
+    - skill_id: skill_guancha
+      level: 23
+      hidden: false
+    - skill_id: skill_xuexi
+      level: 28
+      hidden: false
+    - skill_id: skill_qinangbaodan
+      level: 33
+      hidden: false
+    - skill_id: skill_qipochongfeng
+      level: 38
+      hidden: false
+    - skill_id: skill_sikao
+      level: 43
+      hidden: false
+    - skill_id: skill_yunyong
+      level: 48
+      hidden: false
+    - skill_id: skill_woyaorenzhenle
+      level: 60
+      hidden: true
+    - skill_id: skill_qinangjudan
+      level: 60
+      hidden: true
+    - skill_id: skill_polichongfeng
+      level: 60
+      hidden: true
+    - skill_id: skill_nuli
+      level: 60
+      hidden: true
+    - skill_id: skill_jinqu
+      level: 60
+      hidden: true
+  ability:
+    - mark_ability_renzhen
+  emblem:
+    - mark_emblem_wuxing
