--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -253,3 +253,7 @@ mark_zhanzhilingyu: 'https://seer2-resource.yuuinih.com/png/markImage/3281.png'
 mark_zhandoulingyu: 'https://seer2-resource.yuuinih.com/png/markImage/3282.png'
 mark_global_guzhanchang: 'https://seer2-resource.yuuinih.com/png/markImage/20012.png'
 mark_xifamihuo: "https://seer2-resource.yuuinih.com/png/markImage/3126.png"
+mark_zisun: 'https://seer2-resource.yuuinih.com/png/markImage/3099.png'
+mark_shaduzhixue: 'https://seer2-resource.yuuinih.com/png/markImage/3100.png'
+mark_shadu: 'https://seer2-resource.yuuinih.com/png/markImage/3101.png'
+mark_shaduhongxue: 'https://seer2-resource.yuuinih.com/png/markImage/3102.png'
