--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -2364,6 +2364,17 @@
     conditions:
       - type: selfUseSkill
       - *condition_probability_20_percent_template
+- id: effect_skill_reduce_opponent_spe_1_stage_15_percent
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    <<: *apply_opponent_statstage_-1_template
+    statType: spe
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_probability_15_percent_template
 - id: effect_skill_reduce_opponent_spe_1_stage_20_percent
   trigger: BeforeHit
   priority: 0
@@ -11530,3 +11541,98 @@
       - type: selfHasMark
         baseId: mark_emblem_wuxing
       - *condition_opponent_nogender
+# 使对方获得自损
+- id: effect_skill_add_mark_opponent_zisun
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: opponent
+    mark:
+      type: entity:baseMark
+      value: mark_zisun
+  condition:
+    type: selfUseSkill
+# 连续使用两次增加50威力
+- id: effect_skill_add_power_50_consecutive_2_times
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: addPower
+    target:
+      base: useSkillContext
+    value: 50
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: continuousUseSkill
+        times: 2
+        strategy: Periodic
+# 使对手获得砂毒
+- id: effect_skill_add_mark_opponent_shadu
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: opponent
+    mark:
+      type: entity:baseMark
+      value: mark_shadu
+  condition:
+    type: selfUseSkill
+# 使自身获得砂毒之血
+- id: effect_skill_add_mark_shaduzhixue
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_shaduzhixue
+  condition:
+    type: selfUseSkill
+# 自身每提升1级特防则威力增加15
+- id: effect_skill_add_power_15_per_spd_level
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    type: addPower
+    target: useSkillContext
+    value:
+      type: dynamic
+      selector:
+        base: selfMarks
+        chain:
+          - type: whereAttr
+            extractor:
+              type: base
+              arg: baseId
+            evaluator:
+              type: same
+              value: stat_stage_spd_up
+          - type: select
+            arg:
+              type: base
+              arg: stack
+          - type: multiply
+            arg: 15
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: selfHasMark
+        baseId: stat_stage_spd_up
+# 使对手获得砂毒之血
+- id: effect_skill_add_mark_opponent_shaduhongxue
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: opponent
+    mark:
+      type: entity:baseMark
+      value: mark_shaduhongxue
+  condition:
+    type: selfUseSkill
