--- a/data/mark_emblem.yaml
+++ b/data/mark_emblem.yaml
@@ -331,13 +331,18 @@
   config: *emblem_config
   tags: [emblem]
   effect:
-    - effect_emblem_increase_douzhanzhihun_fixed_damage_50_percent 
+    - effect_emblem_increase_douzhanzhihun_fixed_damage_50_percent
 - id: mark_emblem_moshu
   config: *emblem_config
   tags: [emblem]
-  effect: 
+  effect:
     - effect_emblem_xifa_skill_accuracy_boost_5_percent
 - id: mark_emblem_wuxing
   config: *emblem_config
   tags: [emblem]
   effect: [] # 该纹章的效果在技能上
+- id: mark_emblem_rouxing
+  config: *emblem_config
+  tags: [emblem]
+  effect:
+    - effect_emblem_raise_spd_1_stage_when_rouruan_20_percent
