--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -10791,3 +10791,185 @@
     - effect_skill_reduce_opponent_spa_spd_1_stage_if_opponent_female
     - effect_skill_reduce_opponent_atk_def_1_stage_if_opponent_male
     - effect_skill_reduce_opponent_atk_def_or_spa_spd_1_stage_if_opponent_nogender_and_self_has_wuxing
+- id: skill_chuanci
+  element: Ground
+  category: Special
+  target: opponent
+  power: 60
+  accuracy: 100
+  rage: 5
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spd_1_stage_5_percent
+- id: skill_dengmu
+  element: Normal
+  category: Status
+  target: opponent
+  power: 0
+  accuracy: 95
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spd_1_stage
+- id: skill_shaduzhitong
+  element: Ground
+  category: Special
+  target: opponent
+  power: 65
+  accuracy: 95
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_zisun
+- id: skill_qutizhuangji
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 85
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_def_1_stage_10_percent
+- id: skill_juanjin
+  element: Ground
+  category: Special
+  target: opponent
+  power: 80
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_power_50_consecutive_2_times
+- id: skill_ruohua
+  element: Normal
+  category: Status
+  target: opponent
+  power: 0
+  accuracy: 95
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_atk_1_stage
+- id: skill_shaduchuanci
+  element: Ground
+  category: Special
+  target: opponent
+  power: 85
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_shadu
+- id: skill_rouxingzhuangji
+  element: Ground
+  category: Physical
+  target: opponent
+  power: 70
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spe_1_stage_15_percent
+    - effect_skill_power_2x_if_last
+- id: skill_shaduzhihong
+  element: Ground
+  category: Status
+  target: opponent
+  power: 0
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_zhongdu
+- id: skill_shaduzhixue
+  element: Ground
+  category: Status
+  target: self
+  power: 0
+  accuracy: 100
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_destroy_mark_zhongdu
+    - effect_skill_add_mark_shaduzhixue
+- id: skill_qunsheluanwu
+  element: Ground
+  category: Climax
+  target: opponent
+  power: 165
+  accuracy: 100
+  rage: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spe_1_stage_20_percent
+- id: skill_rourenchuanci
+  element: Ground
+  category: Special
+  target: opponent
+  power: 95
+  accuracy: 95
+  rage: 25
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_power_15_per_spd_level
+- id: skill_qianglijuanjin
+  element: Ground
+  category: Special
+  target: opponent
+  power: 100
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_power_50_consecutive_2_times
+- id: skill_shaduchuantou
+  element: Ground
+  category: Special
+  target: opponent
+  power: 95
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_shadu
+- id: skill_shaduhongxue
+  element: Ground
+  category: Status
+  target: opponent
+  power: 0
+  accuracy: 100
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_shaduhongxue
