--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -920,3 +920,18 @@ skill_qinangjudan: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
 skill_polichongfeng: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
 skill_nuli: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
 skill_jinqu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_chuanci: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_dengmu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_shaduzhitong: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_qutizhuangji: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_juanjin: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_ruohua: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_shaduchuanci: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_rouxingzhuangji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_shaduzhihong: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_shaduzhixue: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_qunsheluanwu: 'https://seer2-resource.yuuinih.com/sound/skill/10581.mp3'
+skill_rourenchuanci: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_qianglijuanjin: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_shaduchuantou: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_shaduhongxue: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
